--- a/Clementine/src/clementine/EntranceUICSS.css
+++ b/Clementine/src/clementine/EntranceUICSS.css
@@ -16,6 +16,10 @@ and open the template in the editor.
     -fx-background-color:#FFA213;
 }
 
+.button:active{
+     -fx-background-color:#FFA213;
+
+}
 
 
 
