--- a/Clementine/src/clementine/devices/devicesPage.fxml
+++ b/Clementine/src/clementine/devices/devicesPage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -15,11 +16,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.devices.DevicesPageController">
+<Pane maxHeight="600.0" maxWidth="1050.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1049.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.devices.DevicesPageController">
    <children>
-      <SplitPane layoutX="2.0" layoutY="1.0" prefHeight="800.0" prefWidth="1500.0">
+      <SplitPane layoutX="2.0" layoutY="1.0" maxHeight="600.0" maxWidth="1050.0" prefHeight="595.0" prefWidth="1045.0">
         <items>
-          <AnchorPane minHeight="800.0" minWidth="1500.0" prefHeight="585.0" prefWidth="758.0" style="-fx-background-color: orange;" styleClass="body" stylesheets="@devicespage.css">
+          <AnchorPane maxHeight="600.0" maxWidth="1050.0" minHeight="500.0" minWidth="700.0" prefHeight="801.0" prefWidth="700.0" style="-fx-background-color: orange;" styleClass="body" stylesheets="@devicespage.css">
                <children>
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7a900" height="79.0" layoutX="492.0" layoutY="436.0" stroke="BLACK" strokeType="INSIDE" width="250.0" />
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="71.0" layoutX="-1.0" layoutY="181.0" mouseTransparent="true" stroke="BLACK" strokeType="INSIDE" width="490.0" />
@@ -90,8 +91,8 @@
                   </ImageView>
                   <Text fill="#f4f4f4" layoutX="572.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Device Name S35FE-03" />
                   <Text fill="#f4f4f4" layoutX="572.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Device Status : Connected" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="38.0" layoutX="556.0" layoutY="116.0" stroke="BLACK" strokeType="INSIDE" width="125.0" />
-                  <Text layoutX="594.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Backup" wrappingWidth="51.999999999999886">
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="38.0" layoutX="556.0" layoutY="116.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="INSIDE" width="125.0" />
+                  <Text layoutX="592.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Backup" wrappingWidth="51.999999999999886">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -123,6 +124,9 @@
                      <image>
                         <Image url="@../../images/unnamed.png" />
                      </image>
+                     <cursor>
+                        <Cursor fx:constant="S_RESIZE" />
+                     </cursor>
                   </ImageView>
                   <ListView layoutX="788.0" layoutY="95.0" prefHeight="359.0" prefWidth="202.0" />
                   <Text layoutX="800.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Songs In Your Phone">
@@ -138,7 +142,7 @@
                   <Text layoutX="807.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The Smiths – There Is a Light " wrappingWidth="141.00000000000006" />
                   <VBox layoutX="788.0" layoutY="149.0" prefHeight="263.0" prefWidth="202.0" style="-fx-border-color: orange;" />
                   <Text fill="#fc0000" layoutX="795.0" layoutY="426.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag and Drop the songs and press sync" wrappingWidth="187.99999999999994" />
-                  <Button layoutX="857.0" layoutY="461.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="63.0" text="SYNC" />
+                  <Button layoutX="859.0" layoutY="454.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="64.0" text="SYNC" />
                </children>
             </AnchorPane>
         </items>
