--- a/Clementine/src/clementine/internet/internetPage.fxml
+++ b/Clementine/src/clementine/internet/internetPage.fxml
@@ -18,7 +18,7 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="617.0" prefWidth="1132.0" styleClass="body-background" stylesheets="@internetpage.css">
                <children>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="521.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="427.0" AnchorPane.leftAnchor="521.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="54.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="521.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="427.0" AnchorPane.leftAnchor="521.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="54.0">
                      <image>
                         <Image url="@../../images/Amazon_Drive_icon.png" />
                      </image>
@@ -29,7 +29,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="288.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="634.0" AnchorPane.leftAnchor="288.0" AnchorPane.rightAnchor="708.0" AnchorPane.topAnchor="54.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="288.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="634.0" AnchorPane.leftAnchor="288.0" AnchorPane.rightAnchor="708.0" AnchorPane.topAnchor="54.0">
                      <image>
                         <Image url="@../../images/1101px-Dropbox_Icon.svg.png" />
                      </image>
@@ -40,7 +40,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="spotify" fitHeight="136.0" fitWidth="142.0" layoutX="65.0" layoutY="52.0" onMouseClicked="#goToLogin" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="429.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="931.0" AnchorPane.topAnchor="52.0">
+                  <ImageView id="#Logos" fx:id="spotify" fitHeight="136.0" fitWidth="142.0" layoutX="65.0" layoutY="52.0" onMouseClicked="#goToLogin" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="429.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="931.0" AnchorPane.topAnchor="52.0">
                      <image>
                         <Image url="@../../images/2111624.png" />
                      </image>
@@ -51,7 +51,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="720.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="427.0" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="276.0" AnchorPane.topAnchor="54.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="720.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="427.0" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="276.0" AnchorPane.topAnchor="54.0">
                      <image>
                         <Image url="@../../images/apps.22785.13510798882873389.58b33862-cbf0-446a-a3fd-b7e45c7624c9.png" />
                      </image>
@@ -62,7 +62,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="291.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="291.0" AnchorPane.rightAnchor="705.0" AnchorPane.topAnchor="344.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="291.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="291.0" AnchorPane.rightAnchor="705.0" AnchorPane.topAnchor="344.0">
                      <image>
                         <Image url="@../../images/icon.png" />
                      </image>
@@ -73,7 +73,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="65.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="931.0" AnchorPane.topAnchor="344.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="65.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="931.0" AnchorPane.topAnchor="344.0">
                      <image>
                         <Image url="@../../images/Seafile.png" />
                      </image>
@@ -84,7 +84,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="931.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="429.0" AnchorPane.leftAnchor="931.0" AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="52.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="931.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="429.0" AnchorPane.leftAnchor="931.0" AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="52.0">
                      <image>
                         <Image url="@../../images/soundcloud-512.png" />
                      </image>
@@ -95,7 +95,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="521.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="521.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="344.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="521.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="521.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="344.0">
                      <image>
                         <Image url="@../../images/somafm-icon.png" />
                      </image>
@@ -106,7 +106,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="720.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="276.0" AnchorPane.topAnchor="344.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="720.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="137.0" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="276.0" AnchorPane.topAnchor="344.0">
                      <image>
                         <Image url="@../../images/Microsoft-OneDrive-icon.png" />
                      </image>
@@ -117,7 +117,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fitHeight="136.0" fitWidth="142.0" layoutX="931.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" styleClass="image" AnchorPane.bottomAnchor="344.0" AnchorPane.leftAnchor="931.0" AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="344.0">
+                  <ImageView id="#Logos" fitHeight="136.0" fitWidth="142.0" layoutX="931.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="344.0" AnchorPane.leftAnchor="931.0" AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="344.0">
                      <image>
                         <Image url="@../../images/magnatune-icon.png" />
                      </image>
