--- a/Clementine/src/clementine/songInfo/songinfopage.css
+++ b/Clementine/src/clementine/songInfo/songinfopage.css
@@ -1,7 +1,12 @@
 /*
  * Empty Stylesheet file.
  */
+.body-background{
 
-.mainFxmlClass {
+  -fx-background-color:linear-gradient(from 25% 25% to 100% 100%,#FFA500,#FF8C00,#F4A460,#FF7F50,#FFFAFA) !important;
 
+
+}
+.text-area .content{
+    -fx-background-color:linear-gradient(from 25% 25% to 100% 100%,#FFA500,#FF8C00,#F4A460,#FF7F50,#FFFAFA) !important;
 }
