--- a/Clementine/src/clementine/internetLogin/internetLogin.fxml
+++ b/Clementine/src/clementine/internetLogin/internetLogin.fxml
@@ -18,8 +18,8 @@
             <Image url="@../../images/2111624.png" />
          </image>
       </ImageView>
-      <TextField layoutX="249.0" layoutY="307.0" prefHeight="31.0" prefWidth="352.0" AnchorPane.bottomAnchor="262.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="307.0" />
-      <TextField layoutX="249.0" layoutY="375.0" prefHeight="31.0" prefWidth="352.0" AnchorPane.bottomAnchor="194.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="375.0" />
+      <TextField fx:id="uname" layoutX="249.0" layoutY="307.0" prefHeight="31.0" prefWidth="352.0" AnchorPane.bottomAnchor="262.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="307.0" />
+      <TextField fx:id="password" layoutX="249.0" layoutY="375.0" prefHeight="31.0" prefWidth="352.0" AnchorPane.bottomAnchor="194.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="375.0" />
       <Button fx:id="login" layoutX="304.0" layoutY="451.0" mnemonicParsing="false" onMouseClicked="#goToSpotifyplaylists" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: green;" text="Login" AnchorPane.bottomAnchor="118.0" AnchorPane.leftAnchor="304.0" AnchorPane.rightAnchor="304.0" AnchorPane.topAnchor="451.0">
          <cursor>
             <Cursor fx:constant="HAND" />
