--- a/Clementine/src/clementine/EntranceUI.fxml
+++ b/Clementine/src/clementine/EntranceUI.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -19,7 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.EntranceUIController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.EntranceUIController">
    <children>
       <Pane fx:id="contentArea" layoutX="-14.0" layoutY="51.0" prefHeight="576.0" prefWidth="1076.0" style="-fx-background-color: #c1dbd9;" AnchorPane.bottomAnchor="113.0" AnchorPane.leftAnchor="205.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <children>
@@ -145,7 +139,7 @@
                   <MenuItem fx:id="ripAudioCD" mnemonicParsing="false" onAction="#openRipAudioCD" text="Rip audio CD" />
                   <MenuItem fx:id="updateChangedLib" mnemonicParsing="false" text="Update changed library folders" />
                   <MenuItem fx:id="fullLibraryRescan" mnemonicParsing="false" text="Do a full library rescan" />
-                  <MenuItem fx:id="preferences" mnemonicParsing="false" onAction="#openPreferences" text="Preferences" />
+                  <MenuItem fx:id="settings" mnemonicParsing="false" onAction="#openSettings" text="Settings" />
                   <MenuItem fx:id="checkUpdates" mnemonicParsing="false" text="Check for updates" />
             </items>
           </Menu>
