--- a/Clementine/src/clementine/tracks/EditTrackFXMLDoc.fxml
+++ b/Clementine/src/clementine/tracks/EditTrackFXMLDoc.fxml
@@ -13,7 +13,7 @@
    <content>
       <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="@EditTrackStyles.css">
          <children>
-            <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="@EditTrackStyles.css">
+            <AnchorPane layoutY="1.0" prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="@EditTrackStyles.css">
                <children>
                   <Text fill="WHITE" layoutX="76.0" layoutY="844.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Comments" wrappingWidth="87.04296875" AnchorPane.bottomAnchor="191.486328125" AnchorPane.leftAnchor="76.0" AnchorPane.rightAnchor="1056.95703125" AnchorPane.topAnchor="828.892578125">
                      <font>
@@ -114,11 +114,11 @@
                               <Insets top="20.0" />
                            </VBox.margin>
                         </TextField>
-                        <TextField>
+                        <ChoiceBox fx:id="mychoicebox4" prefHeight="43.0" prefWidth="295.0" styleClass="drop" stylesheets="@EditTrackStyles.css">
                            <VBox.margin>
                               <Insets top="20.0" />
                            </VBox.margin>
-                        </TextField>
+                        </ChoiceBox>
                         <ChoiceBox fx:id="mychoicebox" prefHeight="43.0" prefWidth="295.0" styleClass="drop" stylesheets="@EditTrackStyles.css">
                            <VBox.margin>
                               <Insets top="20.0" />
@@ -196,7 +196,7 @@
                   </VBox>
                   <HBox layoutX="199.0" layoutY="923.0" prefHeight="68.0" prefWidth="924.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="56.0" prefWidth="446.0" styleClass="btn-clr" text="Save">
+                        <Button mnemonicParsing="false" onAction="#saving" prefHeight="56.0" prefWidth="446.0" styleClass="btn-clr" text="Save">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -204,7 +204,7 @@
                               <Insets />
                            </opaqueInsets>
                         </Button>
-                        <Button fx:id="discardBtn" mnemonicParsing="false" prefHeight="56.0" prefWidth="446.0" styleClass="btn-clr" stylesheets="@EditTrackStyles.css" text="Discard">
+                        <Button fx:id="discardBtn" mnemonicParsing="false" onAction="#discard" prefHeight="56.0" prefWidth="446.0" styleClass="btn-clr" stylesheets="@EditTrackStyles.css" text="Discard">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
