--- a/Clementine/src/clementine/playtlistInfo/playlistInfo.fxml
+++ b/Clementine/src/clementine/playtlistInfo/playlistInfo.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="869.0" styleClass="body-background" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.playtlistInfo.PlaylistInfoController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="869.0" styleClass="body-background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.playtlistInfo.PlaylistInfoController">
     <stylesheets>
         <URL value="@playlistinfo.css" />
     </stylesheets>
@@ -67,5 +69,13 @@
             <Font size="11.0" />
          </font>
       </Button>
+      <ImageView fitHeight="70.0" fitWidth="48.0" layoutX="787.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="62.0">
+         <image>
+            <Image url="@../../images/playIcon.png" />
+         </image>
+         <effect>
+            <DropShadow height="13.0" radius="4.5" spread="0.17" width="7.0" />
+         </effect>
+      </ImageView>
    </children>
 </AnchorPane>
