--- a/Clementine/src/clementine/visualizations/visualizations.fxml
+++ b/Clementine/src/clementine/visualizations/visualizations.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.transcodeMusic.TranscodeMusicController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.visualizations.VisualizationsController">
     <stylesheets>
-        <URL value="@transcodemusic.css"/>
+        <URL value="@visualizations.css"/>
     </stylesheets>
 </AnchorPane>
